adding profile picture

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="https://raw.githubusercontent.com/Thatguy560/Thatguy560.github.io/master/src/components/D50_6696(1).jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/D50_6696(1).jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Peter Stevens</a></h1>
 					<p>Junior Full-Stack Developer <br/>Makers Academy Alumni</p>
 				</header>
