adding profile picture

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<div class="features">
                     <!-- Project 1 -->
 										<article>
-                      <a href="https://github.com/Team-react/Playlist_App" class="image"><img src="https://raw.githubusercontent.com/Thatguy560/Thatguy560.github.io/master/src/components/Screenshot%202020-05-20%20at%2018.33.52.png" alt="" /></a>
+                      <a href="https://github.com/Team-react/Playlist_App" class="image"><img src="https://raw.githubusercontent.com/Thatguy560/CV/master/Assets/Screenshot%202020-05-20%20at%2018.33.52.png" alt="" /></a>
 											<div class="inner">
 												<h4>Road To Discovery (React)</h4>
                         <p>Short on time and tired of hearing the same old playlists that you keep forgetting to update? No problem Introducing: ROAD TO DISCOVERY. This was my final group project at Makers Academy and took just under two weeks to build.<b><hr>Tech Stack:</b> React, Node, Javascript, Spotify Web API, Travis CI, Heroku</p>
