adding profile picture

--- a/index.html
+++ b/index.html
@@ -518,9 +518,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</div>
 
 				<!-- Footer -->
-					<section id="footer">
+					<!-- <section id="footer"></section>
 						<div class="container">
-							<ul class="copyright">
+							<ul class="copyright"> -->
 								
 							</ul>
 						</div>
