made some styling adjustments

--- a/index.html
+++ b/index.html
@@ -164,10 +164,13 @@
                         </ul>
 											</div>
                     </article>
+            
+                    
 
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
+                  <hr style="width:10000px;height:6px;border:none;color:#f4f4f4;background-color:#f4f4f4;" />
                   <h3>Contact</h3>
                   <p class="icon solid fa-mobile"> 07727 900494 <b>(Mobile)</b></p>
                   <p class="icon solid fa-phone"> 0208 367 0753 <b>(Home)</b></p>
