updated project section with recently made calculator app

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 										<!-- Project 3 -->
 										<article>
-											<a href="https://github.com/Thatguy560/CalculatorReact" class="image"><img src="https://raw.githubusercontent.com/Thatguy560/CalculatorReact/master/public/Screenshot%202020-07-14%20at%2018.31.32.png" alt="" /></a>
+											<a href="https://github.com/Thatguy560/CalculatorReact" class="image"><img src="https://raw.githubusercontent.com/Thatguy560/CalculatorReact/master/public/Screenshot%202020-07-14%20at%2018.31.32.png" alt="" width="416" height="272"/></a>
 											<div class="inner">
 												<h4>Calculator (Built With React)</h4>
                         <p>A fairly straight forward calculator made with React JS, I installed the 'Math.js' dependency to evaluate expressions. This app provides you with fundamental functionality to help solve rudimentary problems and basic Trigonometry.<b><hr>Tech Stack:</b> React, JavaScript, HTML/CSS</p>
