moved RSpec and Jasmine to Languages and Frameworks from pratices

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 									<p></p>
 									<ul class="feature-icons">
                     <br>
-                    <li class="icon solid fa-code"><b>Languages & Frameworks</b> - Ruby, JavaScript, HTML, CSS, Rails, React, jQuery, Sinatra, Bootstrap, PostgreSQL</li>
+                    <li class="icon solid fa-code"><b>Languages & Frameworks</b> - Ruby, JavaScript, HTML, CSS, Rails, React, jQuery, Sinatra, Bootstrap, PostgreSQL, RSpec, Jasmine</li>
                     <br>
-                    <li class="icon solid fa-cubes"><b>Practices</b> - Object Oriented Programming, TDD, MVC, Domain-driven design, Agile/XP, RSpec, Jasmine</li>
+                    <li class="icon solid fa-cubes"><b>Practices</b> - Object Oriented Programming, TDD, MVC, Domain-driven design, Agile/XP</li>
                     <br>
                     <li class="icon solid fa-users"><b>Soft Skills</b> - Communication, Attention To Detail, Problem Solving, Adaptability, Teamwork</li>
 									</ul>
