updating app demos

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                         <ul class="feature-icons">
                           <hr>
                           <li><a href="https://github.com/Thatguy560/CalculatorReact" rel="noopener noreferrer" target="_blank">GitHub</a></li>
+													<li><a href="https://thatguy560.github.io/CalculatorReact/" rel="noopener noreferrer" target="_blank">Demo</a></li>
                         </ul>
 											</div>
                     </article>
