updating app demos

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                         <ul class="feature-icons">
                           <hr>
                           <li><a href="https://github.com/Thatguy560/WeatherApp" rel="noopener noreferrer" target="_blank">GitHub</a></li>
+													<li><a href="https://Thatguy560.github.io/WeatherApp" rel="noopener noreferrer" target="_blank">Demo</a></li>
                         </ul>
 											</div>
                     </article>
