updated project listing with Clock-JS

--- a/index.html
+++ b/index.html
@@ -168,7 +168,20 @@
                         </ul>
 											</div>
                     </article>
-                    <!-- Project 8 -->
+										<!-- Project 8 -->
+										<article>
+											<a href="https://github.com/Thatguy560/Clock-JS" class="image"><img src="images/Screenshot 2020-08-04 at 13.21.44.png" alt="" /></a>
+											<div class="inner">
+												<h4>Clock-JS (JavaScript)</h4>
+												<p>A fully functional analogue clock made using Javascript and stylised using HTML/CSS. Used Heroku for deployment.<b><hr>Tech Stack:</b> Javascript, HTML/CSS, Heroku</p>
+												<ul class="feature-icons">
+													<hr>
+													<li><a href="https://github.com/Thatguy560/Clock-JS" rel="noopener noreferrer" target="_blank">GitHub</a></li>
+													<li><a href="https://peters-clock.herokuapp.com" rel="noopener noreferrer" target="_blank">Demo</a></li>
+												</ul>
+											</div>
+										</article>
+                    <!-- Project 9 -->
                     <article>
 											<a href="https://github.com/Thatguy560/ThermostatChallenge" class="image"><img src="images/Screenshot 2020-06-08 at 14.09.20.png" alt="" /></a>
 											<div class="inner">
