updated languages & frameworks section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<p></p>
 									<ul class="feature-icons">
                     <br>
-                    <li class="icon solid fa-code"><b>Languages & Frameworks</b> - Ruby, JavaScript, HTML/CSS, Rails, React, jQuery, Sinatra, Bootstrap, PostgreSQL, RSpec, Jasmine</li>
+                    <li class="icon solid fa-code"><b>Languages & Frameworks</b> - Ruby, JavaScript, HTML/CSS, Rails, React, jQuery, Sinatra, Bootstrap, PostgreSQL, RSpec, Jest, Jasmine</li>
                     <br>
                     <li class="icon solid fa-cubes"><b>Practices</b> - Object Oriented Programming, TDD, MVC, Domain-driven design, Agile/XP</li>
                     <br>
