added mars rover project to portfolio

--- a/index.html
+++ b/index.html
@@ -132,7 +132,19 @@
                         </ul>
 											</div>
                     </article>
-                    <!-- Project 5 -->
+                     <!-- Project 5 --> 
+                     <article>
+											<a href="https://github.com/Thatguy560/mars-rover" class="image"><img src="https://cdn.mos.cms.futurecdn.net/pCubQdszKKbYMnAjpSx6LP.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Mars Rover Technical Challenge (Ruby)</h4>
+                        <p>Techical assessment, using irb you can control a new rover by making it turn left and right and move it in any direction, you can also view it's co-ordinates. I used the gem 'Simplecov' for test coverage (100.00% Achieved).<b><hr>Tech Stack:</b> Ruby, RSpec</p>
+                        <ul class="feature-icons">
+                          <hr>
+                          <li><a href="https://github.com/Thatguy560/mars-rover" rel="noopener noreferrer" target="_blank">GitHub</a></li>
+                        </ul>
+											</div>
+                    </article>
+                    <!-- Project 6 -->
                     <article>
 											<a href="https://github.com/Thatguy560/Banktechtest" class="image"><img src="https://images.unsplash.com/photo-1551260627-fd1b6daa6224?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1947&q=80" alt="" /></a>
 											<div class="inner">
@@ -144,7 +156,7 @@
                         </ul>
 											</div>
                     </article>
-                    <!-- Project 6 -->
+                    <!-- Project 7 -->
                     <article>
 											<a href="https://github.com/Thatguy560/GildedRose-Refactoring-Kata" class="image"><img src="https://images.unsplash.com/photo-1581185985031-0c10e88210cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="" /></a>
 											<div class="inner">
@@ -156,7 +168,7 @@
                         </ul>
 											</div>
                     </article>
-                     <!-- Project 7 -->
+                     <!-- Project 8 -->
                      <article>
 											<a href="https://github.com/Thatguy560/acebook-5Makerteers" class="image"><img src="https://raw.githubusercontent.com/Thatguy560/CV/master/Assets/Screenshot%202020-05-20%20at%2018.46.14.png" alt="" /></a>
 											<div class="inner">
@@ -168,7 +180,7 @@
                         </ul>
 											</div>
                     </article>
-										<!-- Project 8 -->
+										<!-- Project 9 -->
 										<article>
 											<a href="https://github.com/Thatguy560/Clock-JS" class="image"><img src="images/Screenshot 2020-08-04 at 13.21.44.png" alt="" /></a>
 											<div class="inner">
@@ -181,7 +193,7 @@
 												</ul>
 											</div>
 										</article>
-                    <!-- Project 9 -->
+                    <!-- Project 10 -->
                     <article>
 											<a href="https://github.com/Thatguy560/ThermostatChallenge" class="image"><img src="images/Screenshot 2020-06-08 at 14.09.20.png" alt="" /></a>
 											<div class="inner">
