rewriting text in project section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 											<a href="https://github.com/Thatguy560/mars-rover" class="image"><img src="https://cdn.mos.cms.futurecdn.net/pCubQdszKKbYMnAjpSx6LP.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Mars Rover Technical Challenge (Ruby)</h4>
-                        <p>Techical assessment, using irb you can control a new rover by making it turn left and right and move it in any direction, you can also view it's co-ordinates. I used the gem 'Simplecov' for test coverage (100.00% Achieved).<b><hr>Tech Stack:</b> Ruby, RSpec</p>
+                        <p>Techical assessment, using irb you can control a new rover by making it turn left, right and then moving it in the direction it's facing, you can also view it's co-ordinates. I used the gem 'Simplecov' for test coverage (100.00% Achieved).<b><hr>Tech Stack:</b> Ruby, RSpec</p>
                         <ul class="feature-icons">
                           <hr>
                           <li><a href="https://github.com/Thatguy560/mars-rover" rel="noopener noreferrer" target="_blank">GitHub</a></li>
