--- a/index.html
+++ b/index.html
@@ -103,9 +103,23 @@
                           <li><a href="https://is-it-busy-or-not.herokuapp.com" rel="noopener noreferrer" target="_blank">Demo</a></li>
                         </ul>
 											</div>
+					</article>
+					
+										<!-- Project 3 -->
+										<article>
+											<a href="https://github.com/Thatguy560/JumpingGameJS" class="image"><img src="images/Screenshot 2020-12-04 at 12.42.36.png" alt="" /></a>
+											<div class="inner">
+												<h4>JumpingGameJS (JavaScript) - Work In Progress</h4>
+                        <p>A simple jumping game where you have to avoid incoming obstacles, the higher your score the faster your reaction time needs to be! This game will also track your high score and give you the option to reset your score after finishing.<b><hr>Tech Stack:</b> JavaScript, HTML/CSS</p>
+                        <ul class="feature-icons">
+                          <hr>
+                          <li><a href="https://github.com/Thatguy560/JumpingGameJS" rel="noopener noreferrer" target="_blank">GitHub</a></li>
+													<li><a href="" rel="noopener noreferrer" target="_blank">Demo</a></li>
+                        </ul>
+											</div>
                     </article>
 
-										<!-- Project 3 -->
+										<!-- Project 4 -->
 										<article>
 											<a href="https://github.com/Thatguy560/CalculatorReact" class="image"><img src="https://images.pexels.com/photos/4386326/pexels-photo-4386326.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="" /></a>
 											<div class="inner">
@@ -119,7 +133,7 @@
 											</div>
                     </article>
 
-                    <!-- Project 4 -->
+                    <!-- Project 5 -->
 										<article>
 											<a href="https://github.com/Thatguy560/WeatherApp" class="image"><img src="images/Screenshot 2020-05-29 at 14.37.57.png" alt="" /></a>
 											<div class="inner">
@@ -132,7 +146,7 @@
                         </ul>
 											</div>
                     </article>
-                     <!-- Project 5 -->
+                     <!-- Project 6 -->
                      <article>
 											<a href="https://github.com/Thatguy560/mars-rover" class="image"><img src="https://cdn.mos.cms.futurecdn.net/pCubQdszKKbYMnAjpSx6LP.jpg" alt="" /></a>
 											<div class="inner">
@@ -144,7 +158,7 @@
                         </ul>
 											</div>
                     </article>
-                    <!-- Project 6 -->
+                    <!-- Project 7 -->
                     <article>
 											<a href="https://github.com/Thatguy560/Banktechtest" class="image"><img src="https://images.unsplash.com/photo-1551260627-fd1b6daa6224?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1947&q=80" alt="" /></a>
 											<div class="inner">
@@ -156,7 +170,7 @@
                         </ul>
 											</div>
                     </article>
-                    <!-- Project 7 -->
+                    <!-- Project 8 -->
                     <article>
 											<a href="https://github.com/Thatguy560/GildedRose-Refactoring-Kata" class="image"><img src="https://images.unsplash.com/photo-1581185985031-0c10e88210cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="" /></a>
 											<div class="inner">
@@ -168,7 +182,7 @@
                         </ul>
 											</div>
                     </article>
-                     <!-- Project 8 -->
+                     <!-- Project 9 -->
                      <article>
 											<a href="https://github.com/Thatguy560/acebook-5Makerteers" class="image"><img src="https://raw.githubusercontent.com/Thatguy560/CV/master/Assets/Screenshot%202020-05-20%20at%2018.46.14.png" alt="" /></a>
 											<div class="inner">
@@ -180,7 +194,7 @@
                         </ul>
 											</div>
                     </article>
-										<!-- Project 9 -->
+										<!-- Project 10 -->
 										<article>
 											<a href="https://github.com/Thatguy560/Clock-JS" class="image"><img src="images/Screenshot 2020-08-04 at 13.21.44.png" alt="" /></a>
 											<div class="inner">
@@ -193,7 +207,7 @@
 												</ul>
 											</div>
 										</article>
-                    <!-- Project 10 -->
+                    <!-- Project 11 -->
                     <article>
 											<a href="https://github.com/Thatguy560/ThermostatChallenge" class="image"><img src="images/Screenshot 2020-06-08 at 14.09.20.png" alt="" /></a>
 											<div class="inner">
