updated projects with demo app of jumping game

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <ul class="feature-icons">
                           <hr>
                           <li><a href="https://github.com/Thatguy560/JumpingGameJS" rel="noopener noreferrer" target="_blank">GitHub</a></li>
-													<li><a href="" rel="noopener noreferrer" target="_blank">Demo</a></li>
+													<li><a href="https://jumping-game.herokuapp.com/" rel="noopener noreferrer" target="_blank">Demo</a></li>
                         </ul>
 											</div>
                     </article>
