updated README for calculator app

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 				</header>
 				<nav id="nav">
 					<ul>
-            <li><a href="#one" class="active">About Me</a></li>
-            <li><a href="CV.pdf" rel="noopener noreferrer" target="_blank" download>CV</a></li>
+            			<li><a href="#one" class="active">About Me</a></li>
+            			<li><a href="CV.pdf" rel="noopener noreferrer" target="_blank" download>CV</a></li>
 						<li><a href="#two">Skills</a></li>
 						<li><a href="#three">Projects</a></li>
-            <li><a href="#four">Contact</a></li>
+            			<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -124,7 +124,7 @@
 											<a href="https://github.com/Thatguy560/CalculatorReact" class="image"><img src="https://images.pexels.com/photos/4386326/pexels-photo-4386326.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="" /></a>
 											<div class="inner">
 												<h4>Calculator (React)</h4>
-                        <p>A fairly straight forward calculator made with React JS, I installed the 'Math.js' dependency to evaluate expressions. This app provides you with fundamental functionality to help solve rudimentary problems and basic Trigonometry.<b><hr>Tech Stack:</b> React, JavaScript, HTML/CSS</p>
+                        <p>A functional calculator made with React JS, I installed the 'Math.js' dependency to evaluate expressions. This app provides you with fundamental functionality to help solve rudimentary problems and basic Trigonometry.<b><hr>Tech Stack:</b> React, JavaScript, HTML/CSS</p>
                         <ul class="feature-icons">
                           <hr>
                           <li><a href="https://github.com/Thatguy560/CalculatorReact" rel="noopener noreferrer" target="_blank">GitHub</a></li>
