updated portfolio with projects update

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 
 					<!-- Project 3 -->
 					<article>
-						<a href="https://github.com/Thatguy560/Character-counter" class="image"><img src="images/Screenshot 2021-04-21 at 14.54.09.png" alt="" /></a>
+						<a href="https://github.com/Thatguy560/Character-counter" class="image"><img src="images/Screenshot 2021-04-29 at 12.58.24.png" alt="" /></a>
 						<div class="inner">
-						<h4>Character Counter (React) - Work In Progress</h4>
+						<h4>Character Counter (React)</h4>
 						<p>A character Counter app. Once loaded you can type in the text area available and it will display the number of Characters used, the number of Characters without spaces, words and lines used. You can also toggle a button to count the word frequency.<b><hr>Tech Stack:</b> React, JavaScript, HTML/CSS</p>
 						<ul class="feature-icons">
 						<hr>
