ammended a few project descriptions

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<a href="https://github.com/Thatguy560/Timer-React" class="image"><img src="images/Screenshot 2021-05-25 at 14.26.33.png" alt="" /></a>
 						<div class="inner">
 						<h4>Timer App (React) - Work In Progress</h4>
-						<p>A simple Timer application made with React. With this app you can set a timer (In Minutes) and once started the timer will count down in real time until it reaches 0. Once started you have the option to pause and resume the timer as well as resetting it.<b><hr>Tech Stack:</b> React, JavaScript, HTML/CSS</p>
+						<p>A simple timer application made with React. With this application you can set a timer in minutes and once started the timer will count down in real time until it reaches 0. Once started, you have the option to pause and resume the timer as well as resetting it.<b><hr>Tech Stack:</b> React, JavaScript, HTML/CSS</p>
 						<ul class="feature-icons">
 						<hr>
 						<li><a href="https://github.com/Thatguy560/Timer-React" rel="noopener noreferrer" target="_blank">GitHub</a></li>
@@ -139,7 +139,7 @@
 					<article>
 						<a href="https://github.com/Thatguy560/JumpingGameJS" class="image"><img src="images/Screenshot 2020-12-04 at 12.42.36.png" alt="" /></a>
 						<div class="inner">
-						<h4>JumpingGameJS (JavaScript) - Work In Progress</h4>
+						<h4>JumpingGameJS (JavaScript)</h4>
                         <p>A simple jumping game where you have to avoid incoming obstacles, the higher your score the faster your reaction time needs to be! This game will also track your high score and give you the option to reset your score after finishing.<b><hr>Tech Stack:</b> JavaScript, HTML/CSS</p>
                         <ul class="feature-icons">
                           <hr>
