Updated project section with timer app now being completed

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<article>
 						<a href="https://github.com/Thatguy560/Favourite-Programming-Language" class="image"><img src="images/Screenshot 2021-07-02 at 15.11.40.png" alt="" /></a>
 						<div class="inner">
-						<h4>Github Favourite Programming Language</h4>
+						<h4>Github Favourite Programming Language (React)</h4>
 						<p>A web based application built over a 4 day period, which allows a user to enter an arbitrary Github username and be presented with a best guess of the user's favourite programming language. <b><hr>Tech Stack:</b> React, Javascript, HTML/CSS</p>
 						<ul class="feature-icons">
 						<hr>
@@ -137,9 +137,9 @@
 
 					<!-- Project 5 -->
 					<article>
-						<a href="https://github.com/Thatguy560/Timer-React" class="image"><img src="images/Screenshot 2021-05-25 at 14.26.33.png" alt="" /></a>
+						<a href="https://github.com/Thatguy560/Timer-React" class="image"><img src="images/Screenshot 2021-07-08 at 20.16.05.png" alt="" /></a>
 						<div class="inner">
-						<h4>Timer App (React) - Work In Progress</h4>
+						<h4>Timer App (React)</h4>
 						<p>A simple timer application made with React. With this application you can set a timer in minutes and once started the timer will count down in real time until it reaches 0. Once started, you have the option to pause and resume the timer as well as resetting it.<b><hr>Tech Stack:</b> React, JavaScript, HTML/CSS</p>
 						<ul class="feature-icons">
 						<hr>
