Fixed gramma errors and updated about me section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 										<h2 class="developer">London Based Full Stack Developer</h2>
 										<p>Ruby | JavaScript | HTML/CSS | Rails | React | jQuery | Sinatra | Bootstrap | PostgreSQL</p>
 									</header>
-									<p>I'm a Junior Developer and Makers Academy alumni, striving for a position where I'm constantly learning and developing my skills and knowledge within a continuously evolving industry. During the last three and a half years I have worked in three separate jobs within the Accounting and Finance sector. As someone who has had a passion for technology from an early age and after conversing with friends working as developers and my own research, I decided to train for a career in software development. I enrolled at Makers because of their great track record and emphasis on practical, real world experience, pair programming and holistic development. This proved an excellent decision as the experience provided me with a comprehensive understanding of the basics of software development. My time spent at Makers furthered my skills with Ruby and Javascript, taught me the importance of effective Github collaboration practices and reinforced my skills with teamwork and problem solving.</p>
+									<p>I'm a Junior Developer and Makers Academy alumni, striving for a position where I'm constantly learning and developing my skills and knowledge within a continuously evolving industry. During the last three and a half years I have gained ample experience within the Accounting and Finance sector. As someone who has had a passion for technology from an early age and after conversing with friends working as developers and my own research, I decided to train for a career in software development. I enrolled at Makers because of their great track record and emphasis on practical, real world experience, pair programming and holistic development. This proved an excellent decision as the experience provided me with a comprehensive understanding of the basics of software development. My time spent at Makers furthered my skills with Ruby and Javascript, taught me the importance of effective Github collaboration practices and reinforced my skills with teamwork and problem solving.</p>
 								</div>
 							</section>
 
@@ -83,7 +83,7 @@
                       <a href="https://github.com/Team-react/Playlist_App" class="image"><img src="https://raw.githubusercontent.com/Thatguy560/CV/master/Assets/Screenshot%202020-05-20%20at%2018.33.52.png" alt="" /></a>
 						<div class="inner">
 						<h4>Road To Discovery (React)</h4>
-                        <p>Short on time and tired of hearing the same old playlists that you keep forgetting to update? No problem Introducing: ROAD TO DISCOVERY. This was my final group project at Makers Academy and took just under two weeks to build.<b><hr>Tech Stack:</b> React, Node, Javascript, Spotify Web API, Travis CI, Heroku</p>
+                        <p>Short on time and tired of hearing the same old playlists that you keep forgetting to update? No problem, Introducing: ROAD TO DISCOVERY. This was my final group project at Makers Academy and took just under two weeks to build.<b><hr>Tech Stack:</b> React, Node, Javascript, Spotify Web API, Travis CI, Heroku</p>
                         <ul class="feature-icons">
 						<hr>
 						<li><a href="https://github.com/Team-react/Playlist_App" rel="noopener noreferrer" target="_blank">GitHub</a></li>
