--- a/index.html
+++ b/index.html
@@ -288,8 +288,9 @@
 								<div class="container">
                   <hr style="width:10000px;height:6px;border:none;color:#f4f4f4;background-color:#f4f4f4;" />
                   <h3>Contact</h3>
-                  <p class="icon solid fa-mobile"> 07727 900494 <b>(Mobile)</b></p>
-                  <p class="icon solid fa-phone"> 0208 367 0753 <b>(Home)</b></p>
+		  <p class="icon solid fa-mobile"> Contact Me <b>(Mobile)</b></p>
+		  <!-- <p class="icon solid fa-mobile"> 07727 900494 <b>(Mobile)</b></p> -->
+	          <!-- <p class="icon solid fa-phone"> 0208 367 0753 <b>(Home)</b></p> -->
                   <p class="icon solid fa-envelope"> Peterstevens510@gmail.com</p>
                   <p class="icon solid fa-home"> Enfield, London, UK</p>
 
